# real-time-ml-system-cohot-1

./: .gitignore  README.MD  notes.md
docker-compose/: Makefile  feature-pipeline.yml  redpanda.yml
services/kafka_to_feature_store/: Makefile  pyproject.toml
services/kafka_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade_producer/: Dockerfile  pyproject.toml
services/trade_producer/src/: kraken_apy.py  main.py
services/trade_to_ohlc/: Makefile  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
trade_producer/: pyproject.toml
trade_producer/src/: kraken_apy.py  main.py
