[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Inigo <inigo_ocariz@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
quixstreams = "^3.8.1"
loguru = "^0.7.3"
hopsworks = "^4.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
